# OOP_labs

./: README  Task_1.cpp  Task_2.cpp  Task_4.cpp
Classification/: Makefile  README.md  input.json
Classification/cpp-classification/resources/: input_full.json
Classification/cpp-classification/resources/output/: hitch-hiker.json  marvel.json  star-wars.json
Classification/cpp-classification/src/: FileReader.cpp  FileReader.h  Individual.cpp  Universe.cpp  Universe.h
Classification/output/: hitch-hiker.json  marvel.json  rings.json  star-wars.json  undefined.json
Coffee/: Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_4_bonus.cpp
Coffee/include/: Utils.hh
ExtraClasses/: Task_3.cpp
ExtraClasses/include/: TextData.hh
ExtraClasses/to_read/: notes_01.txt
Lab2-OOP-branch1-IDE/: README.md  autocomplete.hpp  highlighter.hpp  main.cpp  project_store.hpp  runner.hpp  terminal_ide.hpp
carService/: CMakeLists.txt
carService/task1/: Queue.hpp  testQueue.cpp
carService/task2/: DineableRefuelable.hpp  testTask2.cpp
carService/task3/: Car.hpp  CarStation.hpp  testCarStation.cpp
carService/task4/: Semaphore.hpp  testSemaphore.cpp
carService/task5/: Scheduler.hpp  generator.cpp  main.cpp
cpp-classification/src/: Individual.h  View.cpp  View.h  main.cpp
include/: Assistant.hh  Display.hh  FileReader.hh
to_read/: read_first.txt
tum_student_manager/: ConsoleUI.cpp  Faculty.cpp  FileManager.cpp  Logger.cpp  Logger.h  Student.cpp  StudyField.h  TUMStudentManager.cpp  main.cpp
tum_student_manager/data/: faculties.txt  members.txt
tum_student_manager/include/: ConsoleUI.h  Faculty.h  FileManager.h  IUniversityStorage.h  Student.h  TUMStudentManager.h
